tests/valid/macros/arrayBasicMacro.wacc
# basic array declaration and assignment

# Output:
# #empty#

# Program:

.define ELEMENT 0

begin
  int[] a = [ELEMENT]
end

