tests/invalid/syntaxErr/macros/arrayBasicMacro.wacc
# basic array declaration and assignment

# Output:
# #empty#

# Program:

.define ELEMENT

begin
  int[] a = [ELEMENT]
end

